# corp_error_agent

./: .gitignore  MANIFEST.in  README.md  corp_error_agent.pth  pyproject.toml  setup.py  sitecustomize.py
corp_error_agent/: __init__.py  sitecustomize.py
corp_error_agent/corp_error_agent.egg-info/: PKG-INFO  SOURCES.txt
tests/: run_tests.bat  run_tests.sh
tests/test_env_vars_1/: run_all_tests.bat  run_all_tests.sh
tests/test_env_vars_1/env_A/: .env  requirements.txt  run_test.py
tests/test_env_vars_1/env_B/: .env  requirements.txt  run_test.py
tests/test_env_vars_1/env_C/: .env  requirements.txt  run_test.py
tests/test_pandas/: requirements_0.txt  requirements_1.txt  requirements_2.txt  run_all_tests.bat  run_all_tests.sh  run_test_0.py  run_test_1.py  run_test_2.py
tests/test_requests/: requirements_0.txt  requirements_1.txt  requirements_2.txt  run_all_tests.bat  run_all_tests.sh  run_test_0.py  run_test_1.py  run_test_2.py  test.py
