[project]
name = "corp_error_agent"
version = "0.2.0"
description = "Runtime agent that captures uncaught errors + env snapshot and prints data-driven CLI hints."
authors = [{name = "Fayol Ateufack"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "requests>=2.31",
  "platformdirs>=3.10",
]

[project.scripts]
corp-error-agent = "corp_error_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]                
py-modules = ["sitecustomize"]   

[tool.setuptools.packages.find]  
where = ["corp_error_agent"]
